# cstring-constexpr-proposal

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml  windows.yml
include/: cstring.hpp  cwchar.hpp  detail.hpp
papers/: proposal.md
test/: CMakeLists.txt  test.cpp  test_char.cpp  test_wchar.cpp
